--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <link rel="canonical" href="https://0s2kducjpelnhhf4-64550928533.shopifypreview.com/products/88dewi-situ-slot-online-terpercaya-1"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
+     <link rel="amphtml" href="https://citigirlx.shop/?amp=1">
+    <link rel="canonical" href="http://88dewi-id.1click.us/"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       88Dewi Situ Slot Online Terpercaya
  &ndash; My Store</title>
-
-    
+<meta name="keywords" content="88dewi, RTP 88dewi, daftar 88dewi, login 88dewi, link alternatif 88dewi">
+<meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="TVh_NODbvT_U2_A6L6j40VCi8tLal9-7Ba2hH5yNvnU" />
       <meta name="description" content="  88Dewi Situ Slot online Terpercaya dan Teraman Dengan 1 akun bisa mengakses kesemua jenis game slot , sportbook , casino dan esport88dewi situ slot hadir dengan deposit pulsa tanpa pulsa Link Terpercaya 88dewi, RTP 88dewi , Daftar 88dewi, Login 88 Dewi">
     
 
