--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <script src="//0s2kducjpelnhhf4-64550928533.shopifypreview.com/cdn/shop/t/2/assets/constants.js?v=58251544750838685771704436883" defer="defer"></script>
     <script src="//0s2kducjpelnhhf4-64550928533.shopifypreview.com/cdn/shop/t/2/assets/pubsub.js?v=158357773527763999511704436884" defer="defer"></script>
-    <script src="//0s2kducjpelnhhf4-64550928533.shopifypreview.com/cdn/shop/t/2/assets/global.js?v=113367515774722599301704436883" defer="defer"></script><script src="//0s2kducjpelnhhf4-64550928533.shopifypreview.com/cdn/shop/t/2/assets/animations.js?v=88693664871331136111704436881" defer="defer"></script><script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta name="robots" content="noindex,nofollow">
+    <script src="//0s2kducjpelnhhf4-64550928533.shopifypreview.com/cdn/shop/t/2/assets/global.js?v=113367515774722599301704436883" defer="defer"></script><script src="//0s2kducjpelnhhf4-64550928533.shopifypreview.com/cdn/shop/t/2/assets/animations.js?v=88693664871331136111704436881" defer="defer"></script><script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta name="robots" content="index,follow">
 <meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/64550928533/digital_wallets/dialog">
 <link rel="alternate" type="application/json+oembed" href="https://0s2kducjpelnhhf4-64550928533.shopifypreview.com/products/88dewi-situ-slot-online-terpercaya-1.oembed">
 <script async="async" src="/checkouts/internal/preloads.js?permanent-domain=8f592c-4.myshopify.com&locale=en-ID"></script>
